[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/Levels.gd" type="Script" id=1]
[ext_resource path="res://sprites/ui/button_s_normal.png" type="Texture" id=2]
[ext_resource path="res://sprites/ui/button_s_click.png" type="Texture" id=3]
[ext_resource path="res://sprites/ui/button_s_hover.png" type="Texture" id=4]
[ext_resource path="res://sprites/ui/button_s_disabled.png" type="Texture" id=5]
[ext_resource path="res://scripts/LevelButton.gd" type="Script" id=6]
[ext_resource path="res://sprites/ui/n1.png" type="Texture" id=7]
[ext_resource path="res://sprites/ui/button_normal.png" type="Texture" id=8]
[ext_resource path="res://sprites/ui/button_click.png" type="Texture" id=9]
[ext_resource path="res://sprites/ui/button_hover.png" type="Texture" id=10]
[ext_resource path="res://sprites/ui/button_disabled.png" type="Texture" id=11]
[ext_resource path="res://sprites/ui/back.png" type="Texture" id=12]

[node name="Levels" type="Node2D"]
script = ExtResource( 1 )

[node name="TemplateButton" type="TextureButton" parent="."]
margin_left = -622.0
margin_top = 839.0
margin_right = -438.0
margin_bottom = 1039.0
rect_scale = Vector2( 1.3, 1.3 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 5 )
script = ExtResource( 6 )

[node name="LevelNum" type="Sprite" parent="TemplateButton"]
position = Vector2( 87.3874, 80.3964 )
texture = ExtResource( 7 )

[node name="Start" type="Node2D" parent="."]
position = Vector2( 192, 216 )

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 23.0
margin_top = 888.0
margin_right = 473.0
margin_bottom = 1088.0
rect_scale = Vector2( 0.9, 0.9 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BackButton"]
position = Vector2( 219, 84 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 12 )

[connection signal="start_level" from="TemplateButton" to="." method="start_level"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
